New Crowdin updates (#1778)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking Schlüssel",
   "global.labels.stakingKeyHash": "Staking Schlüssel Prüfsumme",
   "global.labels.upgrade": "Aktualisieren",
+  "global.labels.current": "Aktuell",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "Ungültige URL",
   "uri.invalid.dialog.warning.text1": "Der angeklickte Link ist ungültig.",
   "uri.invalid.dialog.warning.text2": "Bitte ersuche den Empfänger das Format genau zu überprüfen.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Es ist keine Wallet für diesen Adresstyp vorhanden.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Bitte den Empfänger, die Adresse zu überprüfen und stelle sicher, dass mindestens eine Wallet verfügbar ist, die diesen Adresstyp unterstützt.",
   "uri.landing.dialog.confirm.label": "Ich habe verstanden",
   "uri.landing.dialog.title": "Führe eine Überweisung mit einer Cardano URL durch",
   "uri.landing.dialog.warning.line1": "Stelle sicher, dass:",
@@ -472,12 +475,15 @@
   "wallet.dashboard.summary.mangled.line2": "Wir empfehlen zu {transactionMessage} um die {ticker} zu delegieren",
   "wallet.dashboard.summary.mangled.makeTx": "Führe eine Transaktion durch",
   "wallet.dashboard.summary.note": "Weniger als Du erwartet hast?",
+  "wallet.dashboard.summary.adaAmountNote1": "Diese Summe beinhaltet die Erträge",
+  "wallet.dashboard.summary.adaAmountNote2": "(eine Abhebung ist erforderlich, um diesen vollen Betrag überweisen zu können)",
   "wallet.dashboard.summary.rewardsTitle": "Summe der Erträge",
   "wallet.dashboard.summary.title": "Zusammenfassung",
   "wallet.dashboard.upcomingRewards.at": "um",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "Ende der Epoche",
   "wallet.dashboard.upcomingRewards.noRewards": "In dieser Epoche wird es keine Erträge geben",
   "wallet.dashboard.upcomingRewards.title": "Anstehende Erträge",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Delegierter Stake Pool",
   "wallet.dashboard.warning.pendingTx": "Die Informationen des Staking Dashboards werden aktualisiert, sobald Deine ausstehende Transaktion bestätigt ist",
   "wallet.debugwallet.explanation1": "Die ausgewählte Wallet ({checksumTextPart}) ist für Tests und Fehlerbehebung gedacht.",
   "wallet.debugwallet.explanation2": "Um Probleme zu vermeiden, solltest du diese Wallet nicht verwenden. <br />Erstelle statt dessen in Yoroi eine neue Wallet.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "Du musst NICHT deregistrieren oder an einen anderen Stakepool delegieren. Du kannst deine bevorzugte Delegierung jederzeit ändern",
   "wallet.transfer.deregister.title": "Soll der Staking Key de-registriert werden?",
   "wallet.transfer.instruction": "Alle beantragten {ticker} werden in die gerade ausgewählte Wallet übertragen",
+  "wallet.transfer.subInstruction": "Erfahre mehr über Byron und Shelley Epochen, und wie man ADA abrufen kann",
   "wallet.undelegation.transaction.explanationLine1": "Du musst NICHT undelegieren bevor Du zu einem anderen Stake pool wechselst",
   "wallet.undelegation.transaction.explanationLine2": "Es wird nach dem Ende der aktuellen Epoche 2 weitere Epochen dauern bis die Undelegierung effektiv wird",
   "wallet.unsupported.subtitle": "Diese Funktion wird von der ausgewählten Wallet nicht unterstützt",
