--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Clave de delegación",
   "global.labels.stakingKeyHash": "Hash de la clave de delegación",
   "global.labels.upgrade": "Actualización",
+  "global.labels.current": "Actual",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "URL inválida",
   "uri.invalid.dialog.warning.text1": "El enlace al que has accedido es inválido.",
   "uri.invalid.dialog.warning.text2": "Por favor, verifica el formato con el receptor.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "No pude encontrar un wallet que acepte este tipo de dirección.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Por favor, pide al receptor que compruebe la dirección y asegúrate de tener al menos un wallet que acepte este tipo de dirección.",
   "uri.landing.dialog.confirm.label": "Entiendo",
   "uri.landing.dialog.title": "Ejecutar una transacción desde una URL de Cardano",
   "uri.landing.dialog.warning.line1": "Asegúrate de:",
@@ -472,12 +475,15 @@
   "wallet.dashboard.summary.mangled.line2": "Recomendamos que {transactionMessage} para delegar las {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "realizar una transacción",
   "wallet.dashboard.summary.note": "¿Menos de lo que esperabas?",
+  "wallet.dashboard.summary.adaAmountNote1": "Este saldo incluye las recompensas",
+  "wallet.dashboard.summary.adaAmountNote2": "(se requiere un retiro para poder enviar esta cantidad completa)",
   "wallet.dashboard.summary.rewardsTitle": "Total recompensas",
   "wallet.dashboard.summary.title": "Tu resumen",
   "wallet.dashboard.upcomingRewards.at": "a las",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "Fin del epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "no se obtendrán recompensas en este epoch",
   "wallet.dashboard.upcomingRewards.title": "Próximas recompensas",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake pool delegado",
   "wallet.dashboard.warning.pendingTx": "La información en Seguimiento se actualizará una vez que se confirme la transacción pendiente",
   "wallet.debugwallet.explanation1": "La billetera que has seleccionado ({checksumTextPart}) sirve para pruebas y depuración.",
   "wallet.debugwallet.explanation2": "Para evitar cualquier problema, no uses esta billetera.<br />En su lugar, usa Yoroi para crear una nueva billetera.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "NO es necesario que te desregistres para delegar en otro stake pool. Puedes cambiar tu preferencia de delegación en cualquier momento",
   "wallet.transfer.deregister.title": "¿También desregistrar la clave de delegación?",
   "wallet.transfer.instruction": "Cualquier {ticker} reclamada será transferida a la billetera actualmente seleccionada",
+  "wallet.transfer.subInstruction": "Conoce más sobre las eras Byron y Shelley, y cómo reclamar ADA en nuestro",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
   "wallet.unsupported.subtitle": "La billetera seleccionada no soporta esta funcionalidad",
