--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Clé de Staking",
   "global.labels.stakingKeyHash": "Hash de la clé de staking",
   "global.labels.upgrade": "Mettre à jour",
+  "global.labels.current": "En cours",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "URL invalide",
   "uri.invalid.dialog.warning.text1": "Le lien sur lequel vous avez cliqué est invalide.",
   "uri.invalid.dialog.warning.text2": "Veuillez demander au destinataire de bien vérifier le format.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Je ne trouve pas de wallet qui accepte ce type d'adresse.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Veuillez demander au destinataire de vérifier l'adresse et assurez-vous que vous avez au moins un wallet qui accepte ce type d'adresse.",
   "uri.landing.dialog.confirm.label": "J'ai compris",
   "uri.landing.dialog.title": "Effectuer une transaction à partir d'une URL Cardano",
   "uri.landing.dialog.warning.line1": "Assurez vous que :",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Total Délégué",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} peuvent être corrigés",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} ne peuvent pas être corrigés",
-  "wallet.dashboard.summary.mangled.line1": "Votre portefeuille a {adaAmount} {ticker} avec des préférences de délégation différentes.",
+  "wallet.dashboard.summary.mangled.line1": "Votre portefeuille a {adaAmount} {ticker} avec une préférence de délégation différente.",
   "wallet.dashboard.summary.mangled.line2": "Nous recommandons de {transactionMessage} pour déléguer vos {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "faire une transaction",
   "wallet.dashboard.summary.note": "Moins que ce que vous aviez prévu ?",
+  "wallet.dashboard.summary.adaAmountNote1": "Ce solde prend en compte les récompenses",
+  "wallet.dashboard.summary.adaAmountNote2": "(une récupération est requise pour être capable de dépenser ce montant total)",
   "wallet.dashboard.summary.rewardsTitle": "Total des Récompenses",
   "wallet.dashboard.summary.title": "Votre Synthèse",
   "wallet.dashboard.upcomingRewards.at": "à",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "Fin de l'époque",
   "wallet.dashboard.upcomingRewards.noRewards": "aucune récompense ne sera gagnée pour cette époque",
   "wallet.dashboard.upcomingRewards.title": "Récompenses à venir",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool délégué",
   "wallet.dashboard.warning.pendingTx": "Les informations du tableau de d'enjeu (staking) seront mises à jour une fois que votre transaction en cours sera confirmée",
   "wallet.debugwallet.explanation1": "Le portefeuille que vous avez sélectionné ({checksumTextPart}) est destiné aux tests et au débogage.",
   "wallet.debugwallet.explanation2": "Pour éviter tout problème, n'utilisez pas ce portefeuille.<br />Utilisez plutôt Yoroi pour créer un nouveau portefeuille.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "Vous n'avez PAS besoin de vous désinscrire pour déléguer à un autre pool. Vous pouvez modifier votre préférence de délégation à tout moment",
   "wallet.transfer.deregister.title": "Désinscrire également la clé de mise en jeu ?",
   "wallet.transfer.instruction": "Tout {ticker} réclamé sera transféré dans votre portefeuille actuellement sélectionné",
+  "wallet.transfer.subInstruction": "Renseignez-vous sur les époques Byron et Shelley et sur la façon de solliciter l'ADA sur notre",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
