--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Chiave di staking",
   "global.labels.stakingKeyHash": "Hash della chiave di staking",
   "global.labels.upgrade": "Aggiornamento",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "URL non valida",
   "uri.invalid.dialog.warning.text1": "Il collegamento selezionato non è valido.",
   "uri.invalid.dialog.warning.text2": "Per favore, chiedi al ricevente di ricontrollare il formato.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "Ho compreso",
   "uri.landing.dialog.title": "Esegui una transazione da un URL di Cardano",
   "uri.landing.dialog.warning.line1": "Assicurati che:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Totale delegato",
   "wallet.dashboard.summary.mangled.can": "{adaAmount}{ticker} può essere corretto",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount}{ticker} non può essere corretto",
-  "wallet.dashboard.summary.mangled.line1": "Il tuo portafoglio ha {adaAmount} {ticker} con un'altra preferenza di delega.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "Si consiglia di {transactionMessage} per delegare {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "fai una transazione",
   "wallet.dashboard.summary.note": "Meno di quanto vi aspettavate?",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Totale ricompense",
   "wallet.dashboard.summary.title": "Riepilogo",
   "wallet.dashboard.upcomingRewards.at": "all'indirizzo",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "Fine dell'epoca",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "nessuna ricompensa sarà guadagnata in quest'epoca",
   "wallet.dashboard.upcomingRewards.title": "Prossimi premi",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool delegata",
   "wallet.dashboard.warning.pendingTx": "Le informazioni di staking verranno aggiornate una volta confermata la transazione in sospeso",
   "wallet.debugwallet.explanation1": "Il portafoglio selezionato ({checksumTextPart}) è per test e debug.",
   "wallet.debugwallet.explanation2": "Per evitare problemi, non usare questo portafoglio.<br />Invece, usa Yoroi per creare un nuovo portafoglio.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "NON è necessario deregistrare per delegare a un altra pool. Potete cambiare la vostra preferenza di delega in qualsiasi momento",
   "wallet.transfer.deregister.title": "Inoltre deregistrare la chiave di staking?",
   "wallet.transfer.instruction": "Ogni {ticker} richiesto sarà trasferito nel portafoglio attualmente selezionato",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "NON è necessario rimuovere la delega prima di cambiare pool",
   "wallet.undelegation.transaction.explanationLine2": "Ci vorranno 2 epoche dopo la fine dell'epoca attuale perché il ritiro delega abbia effetto",
   "wallet.unsupported.subtitle": "Il portafoglio selezionato non supporta questa funzionalità",
