--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "アップグレード",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "URLが無効です",
   "uri.invalid.dialog.warning.text1": "クリックしたリンクは無効です",
   "uri.invalid.dialog.warning.text2": "受信者に形式の再確認を依頼してください。",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "確認しました",
   "uri.landing.dialog.title": "CardanoのURLからトランザクションを実行する",
   "uri.landing.dialog.warning.line1": "次のことを確認してくだい：",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "委任合計額",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "トランザクションを実行する",
   "wallet.dashboard.summary.note": "予想していたより少ない場合",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "報酬合計額",
   "wallet.dashboard.summary.title": "サマリー",
   "wallet.dashboard.upcomingRewards.at": "、",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "このエポックでは報酬は発生しません",
   "wallet.dashboard.upcomingRewards.title": "獲得予定の報酬",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "ステークプールに委任しました",
   "wallet.dashboard.warning.pendingTx": "保留中のトランザクションが完了するとステーキングダッシュボードの情報が更新されます",
   "wallet.debugwallet.explanation1": "選択されたウォレット({checksumTextPart})はテスト・デバッグ用です。",
   "wallet.debugwallet.explanation2": "このウォレットを使用すると問題が発生する可能性があります。<br />代わりに、新規のウォレットを作成しお使いください。",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "ステークプールを切り替えるために委任を解除する必要はありません。",
   "wallet.undelegation.transaction.explanationLine2": "委任の解除は、現在のエポック終了後、2エポックかかります。",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
