--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "유효하지 않은 URL",
   "uri.invalid.dialog.warning.text1": "유효하지 않은 링크입니다.",
   "uri.invalid.dialog.warning.text2": "수신자에게 포맷이 정확한지 이중 확인하세요.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "내용을 확인했습니다",
   "uri.landing.dialog.title": "카르다노 URL에서 전송 수행하기",
   "uri.landing.dialog.warning.line1": "필수 확인:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "총 위임량",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "거래 생성하기",
   "wallet.dashboard.summary.note": "예상보다 적은가요?",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "총 보상량",
   "wallet.dashboard.summary.title": "요약",
   "wallet.dashboard.upcomingRewards.at": "시각",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "이번 에포크에는 보상이 발생하지 않습니다.",
   "wallet.dashboard.upcomingRewards.title": "다음 보상",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "위임된 스테이킹 풀",
   "wallet.dashboard.warning.pendingTx": "스테이킹 대시보드 정보는 보류된 거래가 처리된 후에 나타납니다.",
   "wallet.debugwallet.explanation1": "선택한 지갑({checksumTextPart})은 테스트 및 디버깅 용도입니다.",
   "wallet.debugwallet.explanation2": "해당 지갑을 사용시 문제가 발생할 수 있습니다.<br /> 대신, 새로운 요로이 지갑을 생성해 사용하세요.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "위임할 풀을 바꾸기 위해서 위임 취소를 할 필요는 없습니다.",
   "wallet.undelegation.transaction.explanationLine2": "위임 취소는 해당 에포크 종료 후 2개 에포크가 지나야 처리됩니다.",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
