--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Stemsleutel",
   "global.labels.stakingKeyHash": "Vingerafdruk stemsleutel",
   "global.labels.upgrade": "Opwaarderen",
+  "global.labels.current": "Huidig",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "简体中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "Foute URL",
   "uri.invalid.dialog.warning.text1": "Foutieve link.",
   "uri.invalid.dialog.warning.text2": "Vraag de ontvanger om het formaat nogmaals te controleren.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "Ik begrijp het",
   "uri.landing.dialog.title": "Voer een transactie uit vanuit een Cardano URL",
   "uri.landing.dialog.warning.line1": "Zorg ervoor dat:",
@@ -472,12 +475,15 @@
   "wallet.dashboard.summary.mangled.line2": "We raden {transactionMessage} aan om de {ticker} te delegeren",
   "wallet.dashboard.summary.mangled.makeTx": "voer een transactie uit",
   "wallet.dashboard.summary.note": "Minder dan verwacht?",
+  "wallet.dashboard.summary.adaAmountNote1": "Dit saldo is inclusief de vergoedingen",
+  "wallet.dashboard.summary.adaAmountNote2": "(opname is vereist om dit volledige bedrag te kunnen verzenden)",
   "wallet.dashboard.summary.rewardsTitle": "Totale beloning",
   "wallet.dashboard.summary.title": "Uw overzicht",
   "wallet.dashboard.upcomingRewards.at": "bij",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "Einde van het tijdperk",
-  "wallet.dashboard.upcomingRewards.noRewards": "er worden in deze Epoch (tijdperk) geen beloningen verdiend",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Einde van de periode",
+  "wallet.dashboard.upcomingRewards.noRewards": "er worden in deze Epoch (periode) geen beloningen verdiend",
   "wallet.dashboard.upcomingRewards.title": "Opkomende beloningen",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stakepool gedelegeerd",
   "wallet.dashboard.warning.pendingTx": "Het overzicht met de stem informatie zal ververst worden als de lopende transactie bevestigd is",
   "wallet.debugwallet.explanation1": "De portemonnee die u gekozen hebt ({checksumTextPart}) is voor test en opsporen van fouten.",
   "wallet.debugwallet.explanation2": "Om problemen te voorkomen gebruik deze Portemonnee niet,<br />\nU kunt beter, met het programma Yoroi, een nieuwe aanmaken.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "U hoeft zich NIET af te melden om te delegeren naar een andere Stakepool. U kunt uw delegatievoorkeur op elk moment wijzigen",
   "wallet.transfer.deregister.title": "Ook de Stakepool sleutel uitschrijven?",
   "wallet.transfer.instruction": "Elke geclaimde {ticker} wordt overgebracht naar de portemonnee die nu door u gekozen is",
+  "wallet.transfer.subInstruction": "Meer informatie over de Byron en Shelley tijdperken en hoe ada te claimen op onze",
   "wallet.undelegation.transaction.explanationLine1": "U hoeft de delegatie NIET ongedaan te maken om van Stakepool te wisselen",
   "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 periodes na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
   "wallet.unsupported.subtitle": "De gekozen portemonnee ondersteunt deze functionaliteit niet",
