--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Chave de Stake",
   "global.labels.stakingKeyHash": "Hash da chave de Stake",
   "global.labels.upgrade": "Upgrade",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "URL inválida",
   "uri.invalid.dialog.warning.text1": "O link em que você clicou é inválido.",
   "uri.invalid.dialog.warning.text2": "Por favor, peça ao recebedor para verificar novamente o formato.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Não foi possível encontrar uma carteira que suporte esse tipo de endereço.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Por favor peça que o remetente verifique o endereço e se assegure que você tenha pelo menos uma carteira que suporte esse tipo de endereço.",
   "uri.landing.dialog.confirm.label": "Compreendo",
   "uri.landing.dialog.title": "Realize uma transação de um URL Cardano",
   "uri.landing.dialog.warning.line1": "Certificar-se que:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Total Delegado",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} pode ser corrigido",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} não pode ser corrigido",
-  "wallet.dashboard.summary.mangled.line1": "Sua carteira tem {adaAmount} {ticker} com preferência de delegação diferente.",
+  "wallet.dashboard.summary.mangled.line1": "Sua carteira tem {adaAmount} {ticker} com preferências de delegações diferentes.",
   "wallet.dashboard.summary.mangled.line2": "Nós recomendamos {transactionMessage} para delegar a {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "fazer uma transação",
   "wallet.dashboard.summary.note": "Menos do que o esperado?",
+  "wallet.dashboard.summary.adaAmountNote1": "Este saldo inclui suas recompensas",
+  "wallet.dashboard.summary.adaAmountNote2": "(saque necessário para conseguir enviar este saldo total)",
   "wallet.dashboard.summary.rewardsTitle": "Total de recompensas",
   "wallet.dashboard.summary.title": "Seu Resumo",
   "wallet.dashboard.upcomingRewards.at": "às",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "Fim da época",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Fim da Época",
   "wallet.dashboard.upcomingRewards.noRewards": "nenhuma recompensa será recebida nesta época",
   "wallet.dashboard.upcomingRewards.title": "Próximas Recompensas",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool Delegado",
   "wallet.dashboard.warning.pendingTx": "As informações do painel de stake serão atualizadas assim que sua transação pendente for confirmada",
   "wallet.debugwallet.explanation1": "A carteira que você selecionou ({checksumTextPart}) é para teste e depuração.",
   "wallet.debugwallet.explanation2": "Para evitar problemas, não use esta carteira. <br /> Em vez disso, use o Yoroi para criar uma nova carteira.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "Você NÃO precisa desaverbar sua chave para delegar para uma pool diferente. Você pode mudar sua escolha a qualquer momento",
   "wallet.transfer.deregister.title": "Também desregistrar a chave de staking?",
   "wallet.transfer.instruction": "Toda {ticker} retirada será transferida sua carteira selecionada",
+  "wallet.transfer.subInstruction": "Aprenda mais sobre as eras Byron e Shelley e como resgatar sua ADA",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
   "wallet.unsupported.subtitle": "A carteira selecionada não suporta esta funcionalidade",
