--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "Неверный URL",
   "uri.invalid.dialog.warning.text1": "Ссылка, на которую Вы нажали, является недействительной.",
   "uri.invalid.dialog.warning.text2": "Пожалуйста, попросите получателя перепроверить формат.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "Мне понятно",
   "uri.landing.dialog.title": "Выполнить транзакцию с URL Cardano",
   "uri.landing.dialog.warning.line1": "Убедитесь, что:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Всего делегировано",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "совершить транзакцию",
   "wallet.dashboard.summary.note": "Меньше, чем Вы ожидали?",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Всего Наград",
   "wallet.dashboard.summary.title": "Ваш итог",
   "wallet.dashboard.upcomingRewards.at": "в",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "в эту эпоху награды не будут заработаны",
   "wallet.dashboard.upcomingRewards.title": "Предстоящие Награды",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Делегировано в стейк-пул",
   "wallet.dashboard.warning.pendingTx": "Информационная панель делегирования будет обновлена как только ваша транзакция будет подтверждена",
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "Вам НЕ нужно отменять делегирование перед сменой пула",
   "wallet.undelegation.transaction.explanationLine2": "Чтобы разделегирование вступило в силу необходимо 2 эпохи после окончания текущей эпохи",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
