--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking anahtarı",
   "global.labels.stakingKeyHash": "Staking anahtarı hash'i",
   "global.labels.upgrade": "Yükselt",
+  "global.labels.current": "Geçerli",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -293,7 +294,7 @@
   "sidebar.settings": "Ayarlar",
   "sidebar.transfer": "Talep / Aktar",
   "sidebar.wallets": "Cüzdanlarım",
-  "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
+  "testnet.shelley.label.message": "TESTNET AĞINDASINIZ.",
   "transfer.form.instructions.step1.text": "Bakiyenizi geri yüklemek yaklaşık 1 dakika sürecektir. Bir sonraki adımda, tüm paranızı taşıyacak bir işlem sunulacak. Lütfen işlemin ayrıntılarını dikkatlice gözden geçirin. İşlemi yapmak için Cardano ağında standart bir işlem ücreti ödemeniz gerekecektir.",
   "transfer.form.masterkey.input.label": "Ana anahtar",
   "transfer.instructions.attention.title.label": "Dikkat",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "Geçersiz URL",
   "uri.invalid.dialog.warning.text1": "Tıkladığınız bağlantı geçersiz.",
   "uri.invalid.dialog.warning.text2": "Lütfen alıcıdan formatı tekrar kontrol etmesini isteyin.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "Anladım",
   "uri.landing.dialog.title": "Bir Cardano URL'sinden işlem gerçekleştirme",
   "uri.landing.dialog.warning.line1": "Emin ol:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Toplam Yetkilendirilenler",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "bir işlem yapın",
   "wallet.dashboard.summary.note": "Beklediğinizden daha az mı?",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Toplam Ödüller",
   "wallet.dashboard.summary.title": "Toplam Ödül",
   "wallet.dashboard.upcomingRewards.at": "saat",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "Dönemin sonu",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "Dönem Sonu",
   "wallet.dashboard.upcomingRewards.noRewards": "bu dönemde ödül kazanılmayacak",
   "wallet.dashboard.upcomingRewards.title": "Gelecek Ödül",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Yetkilendirilmiş Bahis Hazuvu",
   "wallet.dashboard.warning.pendingTx": "Bekleyen işleminiz onaylandıktan sonra bahis panosu bilgileri güncellenir",
   "wallet.debugwallet.explanation1": "Seçtiğiniz cüzdan ({checksumTextPart}) test & hata ayıklama içindir.",
   "wallet.debugwallet.explanation2": "Herhangi bir sorunu önlemek için bu cüzdanı kullanmayın. <br /> Bunun yerine yeni bir cüzdan oluşturmak için Yoroi'yi kullanın.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "Bahis havuzlarını değiştirmeden önce yetkilendirmenizi kaldırmanız GEREKMEZ",
   "wallet.undelegation.transaction.explanationLine2": "Yetkilendirmenin yürürlüğe girmesi, mevcut dönemin sona ermesinden sonra 2 dönem alacaktır",
   "wallet.unsupported.subtitle": "Seçilen cüzdan bu işlevi desteklemiyor",
