--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "升级",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "无效的链接地址",
   "uri.invalid.dialog.warning.text1": "你所点击的链接无效",
   "uri.invalid.dialog.warning.text2": "请咨询收款方核验格式",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "我理解",
   "uri.landing.dialog.title": "使用Cardano付款链接发起交易",
   "uri.landing.dialog.warning.line1": "请确保：",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "委托总量",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "进行一笔交易",
   "wallet.dashboard.summary.note": "比预期少",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "收益总量",
   "wallet.dashboard.summary.title": "你的总览",
   "wallet.dashboard.upcomingRewards.at": "在...时",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "时代结束",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "当前时代将没有任何奖励",
   "wallet.dashboard.upcomingRewards.title": "即将到来的奖励",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "已委托的权益池",
   "wallet.dashboard.warning.pendingTx": "委托的总览信息会在暂挂交易确认后在钱包内更新",
   "wallet.debugwallet.explanation1": "你所选择的钱包{checksumTextPart} 仅用于测试。",
   "wallet.debugwallet.explanation2": "为了避免错误，请不要使用该钱包。<br />你应该使用Yoroi创建一个新钱包。",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
   "wallet.unsupported.subtitle": "所选的钱包不支持此功能",
