--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -111,6 +111,7 @@
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Αναβάθμιση",
+  "global.labels.current": "Current",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
   "global.language.dutch": "Nederlands",
@@ -326,6 +327,8 @@
   "uri.invalid.dialog.title": "Άνευ ισχύος Ενιαίος Εντοπιστής Πόρων (URL)",
   "uri.invalid.dialog.warning.text1": "Ο σύνδεσμος που κάνατε κλικ δεν ισχύει.",
   "uri.invalid.dialog.warning.text2": "Παρακαλώ ζητήστε από τον αποδέκτη να ελέγξει καλα τη μορφή.",
+  "uri.invalid.dialog.warning.invalidAddressText1": "Couldn't find a wallet that supports this address type.",
+  "uri.invalid.dialog.warning.invalidAddressText2": "Please ask the receiver to check the address and make sure you have at least one wallet that supports this address type.",
   "uri.landing.dialog.confirm.label": "Καταλαβαίνω",
   "uri.landing.dialog.title": "Εκτελέστε μία συναλλαγή από Ενιαίο Εντοπιστή Πόρων (URL) Cardano",
   "uri.landing.dialog.warning.line1": "Να είστε σίγουροι:",
@@ -468,16 +471,19 @@
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
   "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preference.",
   "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
+  "wallet.dashboard.summary.adaAmountNote1": "This balance includes rewards",
+  "wallet.dashboard.summary.adaAmountNote2": "(withdrawal required to be able to send this full amount)",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
   "wallet.dashboard.summary.title": "Your Summary",
   "wallet.dashboard.upcomingRewards.at": "at",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of Epoch",
   "wallet.dashboard.upcomingRewards.noRewards": "no rewards will be earned on this epoch",
   "wallet.dashboard.upcomingRewards.title": "Upcoming Rewards",
+  "wallet.dashboard.upcomingRewards.delegatedTitle": "Stake Pool Delegated",
   "wallet.dashboard.warning.pendingTx": "Staking dashboard information will update once your pending transaction is confirmed",
   "wallet.debugwallet.explanation1": "Το πορτοφόλι που επιλέξατε ({checksumTextPart}) είναι για δοκιμές και αποσφαλμάτωση.",
   "wallet.debugwallet.explanation2": "Για να αποφύγετε οποιαδήποτε ζητήματα, μην χρησιμοποιείται αυτό το πορτοφόλι.<br />αντ'αυτού, χρησιμοποιήστε το Yoroi για να δημιουργήσετε ένα νέο πορτοφόλι.",
@@ -709,6 +715,7 @@
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.subInstruction": "Learn more about Byron and Shelley eras and how to claim ADA on our",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
